# GitStack

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/_layouts/: default.html
docs/superpowers/follow-ups/: 2026-05-06-readme-website-audit.md
docs/superpowers/plans/: 2026-04-18-main-window-split.md  2026-04-18-pygit2-repo-split.md  2026-04-21-auto-change-detection.md  2026-04-21-graph-sidebar-signal-tests.md  2026-04-22-delete-remote-branch.md  (+17 more)
git_gui/: logging_setup.py  observability.py
git_gui/application/: commands.py  queries.py
git_gui/domain/: entities.py  ports.py
git_gui/infrastructure/: commit_ops_cli.py  git_clone.py  remote_tag_cache.py  repo_store.py  submodule_cli.py
git_gui/presentation/: app_settings.py  bus.py  main_window.py
tests/: conftest.py  test_logging_setup.py  test_main_validation.py  test_observability.py  test_qt_message_filter.py  test_resources.py
tests/application/: test_commands.py  test_commands_branches.py  test_commands_cherry_pick_revert_reset.py  test_commands_remote_submodule.py  test_queries.py  test_queries_branches.py  test_queries_remote_submodule.py
tests/domain/: test_entities.py  test_entities_local_branch_info.py  test_ports.py
tests/infrastructure/: test_commit_ops_cli.py  test_discard.py  test_hunk_staging.py  test_pygit2_package.py  test_pygit2_ports.py  test_pygit2_repo_branches.py  test_pygit2_repo_remotes.py  test_pygit2_repo_reset.py  test_pygit2_repo_submodules.py  test_reads.py  test_remote_tag_cache.py  test_repo_store.py  test_submodule_cli.py  test_untracked_diff.py  test_writes.py
tests/presentation/: test_app_settings.py  test_diff_model.py  test_graph_model.py  test_main_window_checkout_conflict.py  test_main_window_package.py  test_main_window_session_factory.py  test_stash_identity_prompt.py  test_working_tree_model.py
(+158 files in other folders)
